# lobbyboy

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  demo.py  demo_server.py  do_demo.py  do_destry.py  pyproject.toml  readme.md
.github/workflows/: release.yaml  unittest.yaml
.ssh/: server.key  server.key.pub  test_rsa1  test_rsa1.pub
dev_datadir/: ssh_host_rsa_key  ssh_host_rsa_key.pub
dev_datadir/.ssh/: id_rsa
docs/images/: lobbyboy.graffle
lobbyboy/: config.py  exceptions.py  lobbyboy_config.toml  main.py  provider.py  scripts.py  server.py  server_killer.py  socket_handle.py  utils.py
lobbyboy/conf/: lobbyboy_config.toml
lobbyboy/contrib/provider/: digitalocean.py  footloose.py  ignite.py  linode.py  multipass.py  vagrant.py  vultr.py
tests/: conftest.py  test_config.py  test_utils.py
tests/test_providers/: conftest.py  test_footloose.py
