[tool.poetry]
name = "lobbyboy"
version = "0.2.3"
description = "Give me a server."
authors = ["laixintao <laixintaoo@gmail.com>"]
license = "GNU"

[tool.poetry.scripts]
lobbyboy-server = 'lobbyboy.server:main'
lobbyboy-config-example = 'lobbyboy.utils:print_exmaple_config'

[tool.poetry.dependencies]
python = "^3.7"
paramiko = {extras = ["gssapi"], version = "^2.8.0"}
python-digitalocean = "^1.17.0"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
bumpversion = "^0.6.0"
pytest = "^6.2.5"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
