[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "lobbyboy"
version = "0.4.0"
description = "Give me a server."
authors = ["laixintao <laixintaoo@gmail.com>"]
license = "GNU"

[tool.poetry.scripts]
lobbyboy-server = 'lobbyboy.main:main'
lobbyboy-config-example = 'lobbyboy.scripts:print_example_config'

[tool.poetry.dependencies]
python = "^3.7"
paramiko = {extras = ["gssapi"], version = "^2.8.0"}
python-digitalocean = "^1.17.0"
toml = "^0.10.2"
linode-api4 = "^5.2.1"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
bumpversion = "^0.6.0"
pytest = "^6.2.5"
flake8 = "^4.0.1"
freezegun = "^1.1.0"
pytest-cov = "^3.0.0"

[tool.black]
target-version = ["py37"]
line-length = 120

[tool.coverage.run]
source = ["lobbyboy"]
